changed info to error in logger_service.dart

--- a/melos.yaml
+++ b/melos.yaml
@@ -1,5 +1,9 @@
 name: zolnoi_componenets
 
+command:
+  version:
+    updateGitTagRefs: true # defaults to false
+
 packages:
   - components.services/**
   - '*'
